# karaml

./: .gitignore  LICENSE  README.md  exceptions.py  file_writer.py  helpers.py  karaml.json  key_codes.py  key_karamlizer.py  layer_karamlizer.py  main.py  map_translator.py  notes.txt  profile_template.json  pyproject.toml  tests.py
docs/: al-ce_config.yaml  config_guide.md  sample_configuration.yaml
karaml/: __main__.py  cfg.py  exceptions.py  file_writer.py  helpers.py  karaml_config.py  key_codes.py  key_karamlizer.py  map_translator.py  profile_template.json  templates.py  user_aliases.py
test/: test_KaramlizedKey.py  test_UserMapping.py  test_auto_toggle_config.yaml  test_config_full.yaml  test_config_min.yaml  test_helpers.py  test_karaml_config.py  test_map_translator.py  test_templates.py  testing_assets.py
