[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "karaml"
description = "A tool to write a Karabiner-Elements configuration in YAML and create/update a corresponding profile or complex modifications set"
readme="README.md"
requires-python = ">=3.7"
license = {file= "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Mac OS X",
]
dependencies= ["PyYAML>=6"]
version = "0.1.0"

[project.scripts]
karaml = "karaml.__main__:main"

[project.urls]
"Homepage" = "https://github.com/al-ce/karaml"
"Bug Tracker" = "https://github.com/al-ce/karaml/issues"
